--- a/src/app/components/footer/footer.component.html
+++ b/src/app/components/footer/footer.component.html
@@ -1,5 +1,5 @@
 <footer class="footer">
-  <div class="container">
+  <div class="container px-3">
     <a
       href="https://github.com/Jahongir780110"
       class="d-inline-block text-white"
