--- a/src/app/welcome/welcome.component.html
+++ b/src/app/welcome/welcome.component.html
@@ -1,25 +1,30 @@
 <div class="welcome-page">
-  <section class="about py-5">
-    <div class="container d-flex align-items-center">
-      <div class="col-6 about-content">
-        <h1 class="title">
-          Our Project Management application is the success of your team's work.
-        </h1>
-        <h5 class="subtitle mt-4">
-          Our team brings you the development tool used by agile teams
-        </h5>
-        <button class="btn tryItButton mt-3">Try it</button>
-      </div>
-      <div class="col-6 about-image">
-        <img src="../../assets/team-board.webp" alt="team kanban board" />
+  <section class="about py-md-5 py-3">
+    <div class="container">
+      <div class="row d-flex align-items-center">
+        <div class="col-md-6 col-12 about-content">
+          <h1 class="title">
+            Our Project Management application is the success of your team's
+            work.
+          </h1>
+          <h5 class="subtitle mt-4">
+            Our team brings you the development tool used by agile teams
+          </h5>
+          <button class="btn tryItButton mt-3">Try it</button>
+        </div>
+        <div class="col-md-6 col-12 about-image mt-md-0 mt-4">
+          <img src="../../assets/team-board.webp" alt="team kanban board" />
+        </div>
       </div>
     </div>
   </section>
 
-  <section class="info py-5">
+  <section class="info py-md-5 py-3">
     <div class="container">
       <div class="title-wrapper d-flex justify-content-center">
-        <h1 class="title text-uppercase px-5 pb-2">What is a kanban board</h1>
+        <h1 class="title text-uppercase text-center px-5 pb-2">
+          What is a kanban board
+        </h1>
       </div>
       <p class="content text-center px-5 mt-4">
         A kanban board is an agile project management tool designed to help
@@ -30,10 +35,10 @@
         and get it done!
       </p>
       <div class="row d-flex align-items-center px-5 mt-5">
-        <div class="col-6 info-image">
+        <div class="col-md-6 col-12 info-image">
           <img src="../../assets/office-worker.jpg" alt="office worker" />
         </div>
-        <div class="col-6 info-text pl-1 py-1">
+        <div class="col-md-6 col-12 info-text pl-1 py-1 mt-md-0 mt-3">
           <h5>
             By dividing the project into small tasks, you simplify the work
             process and the ability to divide the project between employees of
@@ -44,7 +49,7 @@
     </div>
   </section>
 
-  <section class="benefits py-5">
+  <section class="benefits py-md-5 py-3">
     <div class="container">
       <div class="title-wrapper d-flex justify-content-center">
         <h1 class="title text-uppercase px-5 pb-2">Our benefits</h1>
@@ -69,10 +74,10 @@
     </div>
   </section>
 
-  <section class="rss py-5">
+  <section class="rss py-md-5 py-3">
     <div class="container">
       <div class="title-wrapper d-flex justify-content-center">
-        <h1 class="title text-uppercase px-5 pb-2">
+        <h1 class="title text-uppercase text-center px-5 pb-2">
           ONLINE COURSE 'DEVELOPMENT WITH ANGULAR'
         </h1>
       </div>
@@ -83,7 +88,9 @@
       </h5>
 
       <div class="button-wrapper text-center mt-3">
-        <button class="btn rs-signup mx-auto">Sign up</button>
+        <button class="btn rs-signup mx-auto">
+          <a href="https://rs.school/angular/">Sign up</a>
+        </button>
       </div>
 
       <div class="rs-info mt-5">
@@ -99,7 +106,7 @@
 
       <div class="rs-features mt-5">
         <div class="row">
-          <div class="col-6 feature d-flex">
+          <div class="col-sm-6 col-12 feature d-flex">
             <fa-icon [icon]="faSackDollar" class="github-logo"></fa-icon>
             <div class="containt">
               <h3>Free education</h3>
@@ -111,7 +118,7 @@
               </p>
             </div>
           </div>
-          <div class="col-6 feature d-flex">
+          <div class="col-sm-6 col-12 feature d-flex mt-sm-0 mt-3">
             <fa-icon [icon]="faClock" class="github-logo"></fa-icon>
             <div class="containt">
               <h3>Training term: 2 months</h3>
@@ -121,7 +128,7 @@
               </p>
             </div>
           </div>
-          <div class="col-6 feature d-flex">
+          <div class="col-sm-6 col-12 feature d-flex mt-sm-0 mt-3">
             <fa-icon [icon]="faUserGroup" class="github-logo"></fa-icon>
             <div class="containt">
               <h3>For everyone</h3>
@@ -131,7 +138,7 @@
               </p>
             </div>
           </div>
-          <div class="col-6 feature d-flex">
+          <div class="col-sm-6 col-12 feature d-flex mt-sm-0 mt-3">
             <fa-icon [icon]="faCertificate" class="github-logo"></fa-icon>
             <div class="containt">
               <h3>Certificate</h3>
@@ -146,7 +153,7 @@
     </div>
   </section>
 
-  <section class="author py-5">
+  <section class="author py-md-5 py-3">
     <div class="container">
       <div class="title-wrapper d-flex justify-content-center">
         <h1 class="title text-uppercase px-5 pb-2">About author</h1>
@@ -156,15 +163,15 @@
     <div class="author-info mt-4">
       <div class="container">
         <div class="row d-flex align-items-center">
-          <div class="col-6 author-info__text">
-            <div class="w-75 text-center">
+          <div class="col-md-6 col-12 author-info__text">
+            <div class="w-75 mx-auto text-center">
               <strong>Jakhongir Ismoilov.</strong> Junior Frontend Developer
               with 1+ year of working experience in Frontend Development.
               Skilled mostly in JavaScript and Vue. Energetic and eager to learn
               new skills. Clean coding is my priority.
             </div>
           </div>
-          <div class="col-6 author-info__image">
+          <div class="col-md-6 col-12 author-info__image mt-md-0 mt-3">
             <img
               src="../../assets/guy-coding.gif"
               alt="guy coding"
