--- a/src/app/pages/welcome/welcome.component.html
+++ b/src/app/pages/welcome/welcome.component.html
@@ -10,7 +10,9 @@
           <h5 class="subtitle mt-4">
             Our team brings you the development tool used by agile teams
           </h5>
-          <button class="btn tryItButton mt-3">Try it</button>
+          <button class="btn tryItButton mt-3" (click)="openBoards()">
+            Try it
+          </button>
         </div>
         <div class="col-md-6 col-12 about-image mt-md-0 mt-4">
           <img src="../../assets/team-board.webp" alt="team kanban board" />
