--- a/src/app/components/column/column.component.html
+++ b/src/app/components/column/column.component.html
@@ -12,17 +12,80 @@
         <button
           ngbDropdownItem
           class="d-flex align-items-center justify-content-between text-secondary"
+          (click)="deleteColumn()"
         >
           <fa-icon [icon]="faTrash"></fa-icon>
-          <span class="text" (click)="deleteColumn()">Delete column</span>
+          <span class="text">Delete column</span>
         </button>
       </div>
     </div>
   </div>
 
-  <app-task></app-task>
+  <app-task
+    *ngFor="let task of column.tasks"
+    [task]="task"
+    [columnId]="id"
+  ></app-task>
 
   <div class="px-2 mt-3">
-    <button class="btn add-task__btn">+ Add new task</button>
+    <button class="btn add-task__btn" (click)="open(content)">
+      + Add new task
+    </button>
   </div>
 </div>
+
+<ng-template #content let-modal>
+  <div class="modal-header">
+    <h4 class="modal-title" id="modal-basic-title">Create a task</h4>
+  </div>
+
+  <div class="modal-body">
+    <div>
+      <label for="taskTitle" class="form-label">Task title:</label>
+      <input
+        type="text"
+        class="form-control"
+        id="taskTitle"
+        placeholder="Enter task title"
+        [(ngModel)]="taskTitle"
+      />
+    </div>
+
+    <div class="mt-3">
+      <label for="taskDescription" class="form-label">Task Description:</label>
+      <input
+        type="text"
+        class="form-control"
+        id="taskDescription"
+        placeholder="Enter task description"
+        [(ngModel)]="taskDescription"
+      />
+    </div>
+
+    <div class="mt-3">
+      <label for="taskUser" class="form-label">Assigned user:</label>
+      <select id="taskUser" class="form-select" [(ngModel)]="taskUserId">
+        <option *ngFor="let user of userService.users" [value]="user.id">
+          {{ user.name }}
+        </option>
+      </select>
+    </div>
+  </div>
+
+  <div class="modal-footer">
+    <button
+      type="button"
+      class="btn btn-outline-secondary"
+      (click)="modal.close()"
+    >
+      Cancel
+    </button>
+    <button
+      type="button"
+      class="btn btn-outline-primary"
+      (click)="createTask()"
+    >
+      Ok
+    </button>
+  </div>
+</ng-template>
