--- a/src/app/components/column/column.component.html
+++ b/src/app/components/column/column.component.html
@@ -1,70 +1,83 @@
 <div class="column pb-3">
   <div
-    class="column-title d-flex justify-content-between align-items-center px-3 py-2"
+    cdkDropList
+    (cdkDropListDropped)="drop($event)"
+    [cdkDropListData]="column.tasks"
+    class="wrapper"
+    [id]="id"
   >
-    <h3 *ngIf="!isEditingTitle">{{ title }}</h3>
-
     <div
-      *ngIf="isEditingTitle"
-      class="edit-title w-100 d-flex align-item-center"
+      class="column-title d-flex justify-content-between align-items-center px-3 py-2"
     >
-      <input
-        type="text"
-        class="form-control"
-        placeholder="Enter column title"
-        #titleInput
-        [(ngModel)]="columnTitle"
-      />
-      <fa-icon
-        [icon]="faCheck"
-        class="ms-auto me-2 text-success"
-        (click)="editColumn()"
-      ></fa-icon>
-      <fa-icon
-        [icon]="faXmark"
-        class="text-danger"
-        (click)="cancelEditing()"
-      ></fa-icon>
-    </div>
+      <h3 *ngIf="!isEditingTitle">{{ title }}</h3>
 
-    <div
-      *ngIf="!isEditingTitle"
-      ngbDropdown
-      class="d-inline-block"
-      placement="bottom-start"
-    >
-      <span class="d-inline-block column-menu__wrapper" ngbDropdownToggle>
-        <fa-icon [icon]="faEllipsisVertical" class="column-menu-btn"></fa-icon>
-      </span>
+      <div
+        *ngIf="isEditingTitle"
+        class="edit-title w-100 d-flex align-item-center"
+      >
+        <input
+          type="text"
+          class="form-control"
+          placeholder="Enter column title"
+          #titleInput
+          [(ngModel)]="columnTitle"
+        />
+        <fa-icon
+          [icon]="faCheck"
+          class="ms-auto me-2 text-success"
+          (click)="editColumn()"
+        ></fa-icon>
+        <fa-icon
+          [icon]="faXmark"
+          class="text-danger"
+          (click)="cancelEditing()"
+        ></fa-icon>
+      </div>
 
-      <div ngbDropdownMenu class="column-options">
-        <button
-          ngbDropdownItem
-          class="d-flex align-items-center text-secondary"
-          (click)="openEditTitleInput()"
-        >
-          <fa-icon [icon]="faPen"></fa-icon>
-          <span class="text ms-2">Edit column</span>
-        </button>
+      <div
+        *ngIf="!isEditingTitle"
+        ngbDropdown
+        class="d-inline-block"
+        placement="bottom-start"
+      >
+        <span class="d-inline-block column-menu__wrapper" ngbDropdownToggle>
+          <fa-icon
+            [icon]="faEllipsisVertical"
+            class="column-menu-btn"
+          ></fa-icon>
+        </span>
 
-        <button
-          ngbDropdownItem
-          class="d-flex align-items-center text-secondary"
-          (click)="deleteColumn()"
-        >
-          <fa-icon [icon]="faTrash"></fa-icon>
-          <span class="text ms-2">Delete column</span>
-        </button>
+        <div ngbDropdownMenu class="column-options">
+          <button
+            ngbDropdownItem
+            class="d-flex align-items-center text-secondary"
+            (click)="openEditTitleInput()"
+          >
+            <fa-icon [icon]="faPen"></fa-icon>
+            <span class="text ms-2">Edit column</span>
+          </button>
+
+          <button
+            ngbDropdownItem
+            class="d-flex align-items-center text-secondary"
+            (click)="deleteColumn()"
+          >
+            <fa-icon [icon]="faTrash"></fa-icon>
+            <span class="text ms-2">Delete column</span>
+          </button>
+        </div>
       </div>
     </div>
-  </div>
 
-  <app-task
-    *ngFor="let task of column.tasks"
-    [task]="task"
-    [columnId]="id"
-    (edit)="openEditTaskForm(task); open(content)"
-  ></app-task>
+    <div class="tasks-wrapper">
+      <app-task
+        *ngFor="let task of column.tasks"
+        [task]="task"
+        [columnId]="id"
+        (edit)="openEditTaskForm(task); open(content)"
+      ></app-task>
+    </div>
+  </div>
 
   <div class="px-2 mt-3">
     <button class="btn add-task__btn" (click)="open(content)">
