--- a/src/app/components/task/task.component.html
+++ b/src/app/components/task/task.component.html
@@ -1,6 +1,8 @@
 <div
   class="task m-2 d-flex justify-content-between align-items-center"
   (click)="editTask()"
+  [cdkDragData]="task"
+  cdkDrag
 >
   <div class="task-title">{{ task.title }}</div>
   <div class="task-remove text-danger" (click)="deleteTask($event)">
