--- a/src/app/pages/edit-profile/edit-profile.component.css
+++ b/src/app/pages/edit-profile/edit-profile.component.css
@@ -1,4 +1,4 @@
-.auth {
+.edit-profile {
   min-height: 100vh;
   background-color: #252934;
   display: flex;
@@ -13,21 +13,4 @@
   background-color: #1e242c;
   padding: 24px 32px;
   border-radius: 12px;
-}
-
-.auth-btn {
-  background-color: #e31b6d;
-  color: #fff;
-  border: none;
-  transition: 0.1s;
-  padding: 4px 32px;
-  font-weight: 500;
-}
-.auth-btn:hover {
-  opacity: 0.9;
-}
-
-.auth-switch__btn {
-  text-decoration: none;
-  color: #e31b6d;
 }
