--- a/src/app/pages/edit-profile/edit-profile.component.html
+++ b/src/app/pages/edit-profile/edit-profile.component.html
@@ -68,7 +68,11 @@
       </div>
 
       <div class="button-wrapper my-4 text-center">
-        <button type="button" class="btn btn-danger me-4" (click)="delete()">
+        <button
+          type="button"
+          class="btn btn-danger me-4"
+          (click)="openDialog()"
+        >
           Delete
         </button>
         <button type="submit" class="btn btn-success">Edit</button>
