--- a/src/app/pages/welcome/welcome.component.html
+++ b/src/app/pages/welcome/welcome.component.html
@@ -4,11 +4,11 @@
       <div class="row d-flex align-items-center">
         <div class="col-md-6 col-12 about-content">
           <h1 class="title">
-            Our Project Management application is the success of your team's
+            My Project Management application is the success of your team's
             work.
           </h1>
           <h5 class="subtitle mt-4">
-            Our team brings you the development tool used by agile teams
+            I bring you the development tool used by agile teams
           </h5>
           <button class="btn tryItButton mt-3" (click)="openBoards()">
             Try it
@@ -54,11 +54,11 @@
   <section class="benefits py-md-5 py-3">
     <div class="container">
       <div class="title-wrapper d-flex justify-content-center">
-        <h1 class="title text-uppercase px-5 pb-2">Our benefits</h1>
+        <h1 class="title text-uppercase px-5 pb-2">Your benefits</h1>
       </div>
 
       <h4 class="subtitle text-center mt-3">
-        By managing your project with our application, you get:
+        By managing my project with our application, you get:
       </h4>
 
       <div class="benefits-list d-flex flex-column mt-5">
