--- a/src/app/pages/boards/boards.component.html
+++ b/src/app/pages/boards/boards.component.html
@@ -7,16 +7,21 @@
 
     <h1 class="title text-center mt-4">Your Boards</h1>
 
+    <div *ngIf="isLoading" class="spinner">
+      <mat-spinner class="mx-auto" color="accent"></mat-spinner>
+    </div>
+
     <div class="row boards-list mt-4">
       <div *ngFor="let board of boardService.boards" class="col-4 mb-3">
         <a [routerLink]="[board.id]">
           <div class="card board-card">
             <div
               class="card-close text-danger"
-              (click)="open(prompt); deleteBoardWithPrompt($event, board.id)"
+              (click)="openDialog($event, board.id)"
             >
               <fa-icon [icon]="faXmark"></fa-icon>
             </div>
+
             <div class="card-body">
               <h3>{{ board.title }}</h3>
               <p>
@@ -51,10 +56,14 @@
       <input
         type="text"
         class="form-control"
+        [ngClass]="titleError ? 'is-invalid' : ''"
         id="title"
         placeholder="Enter board title"
         [(ngModel)]="title"
       />
+      <div *ngIf="titleError" class="text-danger input-error">
+        Please enter valid board title
+      </div>
     </div>
 
     <div class="mt-3">
@@ -62,10 +71,14 @@
       <input
         type="text"
         class="form-control"
+        [ngClass]="descriptionError ? 'is-invalid' : ''"
         id="description"
         placeholder="Enter board description"
         [(ngModel)]="description"
       />
+      <div *ngIf="descriptionError" class="text-danger input-error">
+        Please enter valid board description
+      </div>
     </div>
   </div>
 
@@ -84,32 +97,6 @@
       (click)="createBoard()"
     >
       Ok
-    </button>
-  </div>
-</ng-template>
-
-<ng-template #prompt let-modal>
-  <div class="modal-header">
-    <h4 class="modal-title" id="modal-basic-title">
-      Do you really want to delete the board?
-    </h4>
-  </div>
-
-  <div class="modal-body text-end">
-    <button
-      type="button"
-      class="btn btn-outline-secondary me-3"
-      (click)="modal.close()"
-    >
-      Cancel
-    </button>
-
-    <button
-      type="button"
-      class="btn btn-outline-danger"
-      (click)="deleteBoard()"
-    >
-      Delete
     </button>
   </div>
 </ng-template>
